--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: redcarpet
 highlighter: true
 exclude: [public]
 url: http://weblog.jamisbuck.org
-permalink: /:year/:month/:day/:title
+permalink: /:year/:month/:day/:title.html
 
 redcarpet:
   extensions: [ smart ]
